[package]
name = "lindera-tantivy"
version = "0.7.1"
authors = [
    "Minoru Osuka <minoru.osuka@gmail.com>",
    "@ken0x0a",
    "Jun Ohtani <johtani@gmail.com>"
]
edition = "2018"
description = "A Tokenizer for Tantivy, based on Lindera."
documentation = "https://docs.rs/lindera-tantivy"
homepage = "https://github.com/lindera-morphology/lindera-tantivy"
repository = "https://github.com/lindera-morphology/lindera-tantivy"
readme = "README.md"
keywords = ["tokenizer", "tantivy", "lindera"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
#tantivy = "0.13"
tantivy = { git = "https://github.com/tantivy-search/tantivy", rev = "670b6eaff6c62381c0ddcc44d6b3d2e82a3b3f1e" }

lindera = "0.7"
lindera-core = "0.7"
